# Sub-Zero

./: Cargo.toml  LICENSE  README.md
assets/readme/: README.md
benchmarks/reports/: 2026-03-07_silent_hill_ab.json
scripts/: evaluate_sub_quality.py  translate_batch.py
scripts/release/: bootstrap_models.sh  package_release.sh
src/: main.rs
src/engine/: chunker.rs  context.rs  deep_scan.rs  doom_qlock.rs  mod.rs  neural_mt.rs  parallel.rs  pipeline.rs  postprocess.rs  srt.rs  stitcher.rs  transcribe.rs  translate.rs
