[package]
name = "sub-zero"
version = "0.1.0"
edition = "2021"
authors = ["IBVoid"]
description = "Offline-first subtitle translation utility."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
strsim = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
